# Anicargo

./: .gitignore  AGENTS.md  LICENSE  README.md
backend/: API.md  Cargo.toml  README.md  log_catalog.json
backend/config/: anicargo.example.toml
backend/crates/anicargo-api/: Cargo.toml
backend/crates/anicargo-api/src/: main.rs
backend/crates/anicargo-bangumi/: Cargo.toml
backend/crates/anicargo-bangumi/src/: lib.rs
backend/crates/anicargo-cli/: Cargo.toml
backend/crates/anicargo-cli/src/: main.rs
backend/crates/anicargo-config/: Cargo.toml
backend/crates/anicargo-config/src/: lib.rs
backend/crates/anicargo-library/: Cargo.toml
backend/crates/anicargo-library/src/: lib.rs
backend/crates/anicargo-library/tests/: parse_and_bangumi.rs
backend/crates/anicargo-media/: Cargo.toml
backend/crates/anicargo-media/src/: lib.rs
backend/crates/anicargo-qbittorrent/: Cargo.toml
backend/crates/anicargo-qbittorrent/src/: lib.rs
backend/docker/postgres/: Dockerfile  docker-compose.yml
backend/docs/: API.md  ARCHITECTURE.md  DEPLOY.md
backend/example/: config.toml
backend/migrations/: 0001_initial.sql  0002_download_engine.sql  0003_resource_discovery.sql  0004_download_execution.sql  0005_media_inventory.sql  0006_playback_history.sql  0007_yuc_catalog.sql  0008_download_runtime_limits.sql  0009_catalog_pages.sql  0010_download_subject_threshold_state.sql  0011_admin_users.sql  0012_media_inventory_multi_subject.sql
backend/script/: load_test.sh  reset_postgres.sh
backend/src/: anilist.rs  animegarden.rs  auth.rs  bangumi.rs  catalog_cache.rs  config.rs  db.rs  discovery.rs  downloads.rs  logcodec.rs  main.rs  media.rs  routes.rs  season_catalog.rs  subject_parts.rs  syoboi.rs  telemetry.rs  types.rs  yuc.rs
clients/winui3/: README.md
deploy/: README.md
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  foundation.md  progress.md  runtime_architecture.md  web_interaction.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  session.tsx  styles.css  theme.ts  uiSettings.ts
frontend/src/Components/: AppShell.tsx  RequireRole.tsx
frontend/src/Icons/: LogoMark.tsx
frontend/src/Pages/: PageAdmin.tsx  PageCollection.tsx  PageLibrary.tsx  PageLogin.tsx  PageManagement.tsx  PageNotFound.tsx  PagePlayer.tsx  PageSettings.tsx  PageSignup.tsx  PageWelcome.tsx
frontend/src/Pages/Components/: ErrorBanner.tsx  FooterNote.tsx
frontend/src/Styles/: AppShell.css  PageAdmin.css  PageCollection.css  PageLibrary.css  PageLogin.css  PageManagement.css  PagePlayer.css  PageSettings.css  PageWelcome.css  theme.css
frontend/src/pages/: LibraryPage.tsx  LoginPage.tsx  PlayerPage.tsx  UserManagementPage.tsx
frontend/web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/web/docs/: ARCHITECTURE.md  DEPLOY.md
frontend/web/src/: App.tsx  api.ts  appearance.tsx  loading-status.tsx  main.tsx  motion.tsx  navigation.ts  session.tsx  styles.css  theme.ts  types.ts  ui-preferences.tsx  view-cache.ts
frontend/web/src/components/: AnicargoPlayer.tsx  AppShell.tsx  BrandLogo.tsx  CardCoverFallback.tsx  EpisodeCard.tsx  SubjectCard.tsx
frontend/web/src/pages/: AdminPage.tsx  HistoryPage.tsx  ResourcesPage.tsx  SearchPage.tsx  SeasonPage.tsx  SettingsPage.tsx  SubjectPage.tsx  SubscriptionsPage.tsx  WatchPage.tsx  YucCatalogPage.tsx
scripts/: README.md  decode-backend-log.py  reset-backend-runtime.ps1  test-downloader-service-longrun.ps1  test-downloader-service.ps1
services/downloader/: Cargo.toml  README.md
services/downloader/config/: downloader.example.toml
services/downloader/docs/: API.md  ARCHITECTURE.md  DEPLOY.md
services/downloader/src/: config.rs  lib.rs  main.rs  model.rs  service.rs
services/metadata-parser/: Cargo.toml  README.md
services/metadata-parser/docs/: ARCHITECTURE.md  DATA_MODEL.md  PARSING_RULES.md  TESTING.md
services/metadata-parser/src/: lib.rs  parser.rs  types.rs
shared/: README.md
