[package]
name = "anicargo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
regex = "1.12"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
librqbit = { version = "8.1.1", default-features = false, features = ["default-tls"] }

[target.'cfg(not(windows))'.dependencies]
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
