[package]
name = "anicargo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anicargo-media = { path = "../anicargo-media" }
argon2 = "0.5"
axum = "0.7"
jsonwebtoken = "9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
