[package]
name = "anicargo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anicargo-config = { path = "../anicargo-config" }
anicargo-bangumi = { path = "../anicargo-bangumi" }
anicargo-library = { path = "../anicargo-library" }
anicargo-media = { path = "../anicargo-media" }
anicargo-qbittorrent = { path = "../anicargo-qbittorrent" }
argon2 = "0.5"
axum = { version = "0.7", features = ["multipart"] }
async-stream = "0.3"
futures = "0.3"
jsonwebtoken = "9"
notify = "6.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["limit"] }
tracing = "0.1"
