[package]
name = "anicargo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anicargo-bangumi = { path = "../anicargo-bangumi" }
anicargo-config = { path = "../anicargo-config" }
anicargo-library = { path = "../anicargo-library" }
anicargo-qbittorrent = { path = "../anicargo-qbittorrent" }
anicargo-media = { path = "../anicargo-media" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
