[package]
name = "anicargo-library"
version = "0.1.0"
edition = "2024"

[dependencies]
anicargo-bangumi = { path = "../anicargo-bangumi" }
anicargo-media = { path = "../anicargo-media" }
anitomy = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
